--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </head>
 <body>
     <div class="game-header">
-        <h1>🐱 CAT MEMORY GAME 🐱</h1>
+        <h1>🐱 Brevis MEMORY GAME 🐱</h1>
         <p style="font-size: 16px;">Find the matching pairs! - 16 Characters</p>
         <div class="stats">
             <div class="stat-item">⏱️ Time: <span id="time">0</span>s</div>
